<resources>
    <string name="app_name">JJGallery</string>
    <string name="back">Back</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_settings">Settings</string>
    <string name="option">Option</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="no_content">No content</string>
    <string name="save_success">Save successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="allno">All no</string>
    <string name="ok">OK</string>
    <string name="giveup">Give up</string>
    <string name="cancel">Cancel</string>
    <string name="loading">loading&#8230;</string>
    <string name="tab_filemanager">File Manage</string>
    <string name="tab_sorder">SOrder</string>
    <string name="tab_spicture">SPicture</string>
    <string name="identity_check">Identity Check</string>
    <string name="success">Success!</string>
    <string name="failed">Failed!</string>
    <string name="warning">Warning</string>
    <string name="checking">checking&#8230;</string>
    <string name="processing">Processing, please wait&#8230;</string>
    <string name="restart_need_unlock">Restart application need check identity, after check right, you could reback public mode!</string>
    <string name="encrypt_check_service_isexist">There are %d files not encrypted, choose ok to encrypt them!</string>
    <string name="encrypt_check_service_encryptok">Encryption completed!</string>
    <string name="encrypt_check_service_isnotexist">All files are encrypted!</string>
    <string name="error_app_root_create_fail">Create application root directory failed!</string>
    <string name="error_database_create_fail">Create application database failed!</string>
    <string name="error_app_root_not_exist">Application root directory is not exist!</string>
    <string name="error_msg_title">Error message</string>
    <string name="login_user">User</string>
    <string name="login_pwd">Password</string>
    <string name="login_pwd_error">error</string>
    <string name="login_fingerprint">Fingerprint Unlock</string>
    <string name="login_finger_not_register">Fingerprint has never been registered in device, please register first!</string>
    <string name="app_init">Initializing application&#8230;&#8230;</string>
    <string name="login_loading_text">Service updating&#8230;&#8230;</string>
    <string name="login_start_service_insert">Start insert file service?</string>
    <string name="login_extend_pref_exist">Extend preference file existed, replace it with application preference?</string>
    <string name="server_not_conf">Please set server url!</string>
    <string name="app_update_found">Found new application version %s, click ok to update.</string>
    <string name="mode_init_title">Access Mode</string>
    <string name="mode_init_next">Next -></string>
    <string name="mode_init_public">public</string>
    <string name="mode_init_public_warning">Once you choose public mode, be aware that every operation is no need to check identity. And this mode need password to unlock!!</string>
    <string name="mode_init_filemanager">file manager</string>
    <string name="mode_init_filemanager_warning">Once you choose file manager mode, you could only access to the file manager system~~</string>
    <string name="mode_init_private">private</string>
    <string name="mode_init_private_warning">Once you choose private mode, every operation is no need to check identity.</string>
    <string name="mode_init_next_fail">Wrong password, please correct it or change access mode!</string>
    <string name="menu_file_create_folder">Create folder</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_random">Casual Look</string>
    <string name="menu_rank">Rank</string>
    <string name="menu_order">Order</string>
    <string name="menu_mode_switch">Switch Mode</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_export">Export data</string>
    <string name="menu_view_gallery">Gallery View</string>
    <string name="menu_fullscreen">Full screen</string>
    <string name="menu_view_grid">Grid View</string>
    <string name="menu_view_list">List View</string>
    <string name="menu_view_current_folder">Current Folder</string>
    <string name="menu_encrypt_current_folder">Encrypt current folder</string>
    <string name="menu_decipher_current_folder">Decipher current folder</string>
    <string name="menu_list_view" translatable="false">List view</string>
    <string name="menu_thumb_folder" translatable="false">Thumb view</string>
    <string name="menu_book_view" translatable="false">Book view</string>
    <string name="menu_index_view" translatable="false">Index view</string>
    <string name="menu_grid_view" translatable="false">Grid view</string>
    <string name="menu_create_order">Add new order</string>
    <string name="menu_by_name">Order by name</string>
    <string name="menu_by_date">Order by date</string>
    <string name="menu_by_itemnum">Order by item number</string>
    <string name="menu_by_none">No order</string>
    <string name="menu_shuffle_gallery">Shuffle gallery</string>
    <string name="menu_random_game">Random game</string>
    <string name="menu_team_game" translatable="false">Team game</string>
    <string name="menu_auto_play">Auto-play</string>
    <string name="menu_stop_auto_play">Stop auto-play</string>
    <string name="menu_check_all_unencrypted">Check all unencrypted files</string>
    <string name="menu_thumb_selectall">Select all</string>
    <string name="menu_thumb_deselectall">Deselect all</string>
    <string name="menu_load">load</string>
    <string name="menu_change_theme">Change theme</string>
    <string name="menu_fullscreen_swipemode">Swipe page mode</string>
    <string name="menu_wall_scaletype">Change scale type</string>
    <string name="menu_wall_savewall">Set as default wallpaper</string>
    <string name="menu_thumb_waterfall">Waterfall view</string>
    <string name="menu_view_all">View all</string>
    <string name="menu_cover_single">Single</string>
    <string name="menu_cover_cascade">Cascade</string>
    <string name="menu_cover_cascade_rotate">Cascade and rotate</string>
    <string name="menu_cover_grid">Grid</string>
    <string name="menu_new_folder">New folder</string>
    <string name="menu_gdb_record">Records</string>
    <string name="menu_gdb_star">Stars</string>
    <string name="menu_gdb_download">Open download manager</string>
    <string name="menu_gdb_check_server">Check update</string>
    <string name="menu_gdb_recommend">See movies</string>
    <string name="menu_gdb_surf_relate" translatable="false">Relate</string>
    <string name="menu_gdb_surf_refresh">Refresh</string>
    <string name="menu_waterfall_random">Random sequence</string>
    <string name="menu_waterfall_origin">Origin sequence</string>
    <string name="filemanager_encrypt">Encrypt</string>
    <string name="filemanager_decipher">Decipher</string>
    <string name="filemanager_delete">Delete</string>
    <string name="filemanager_list" translatable="false">List manager</string>
    <string name="filemanager_grid" translatable="false">Grid manager</string>
    <string name="filemanager_thumb" translatable="false">Thumb folder manager</string>
    <string name="filemanager_index" translatable="false">Flow index manager</string>
    <string name="filelist_tag_name">File Name</string>
    <string name="filelist_tag_time">Last Modified</string>
    <string name="filelist_tag_wh">Image Size</string>
    <string name="filelist_parent">..parent directory</string>
    <string name="filelist_radio_all">All</string>
    <string name="filelist_radio_encrypted">encrypted</string>
    <string name="filelist_radio_unencrypted">unencrypted</string>
    <string name="filelist_delete">delete</string>
    <string name="filelist_delete_msg">Are you sure to delete?</string>
    <string name="filelist_delete_empty_folder">This is an empty folder, are you sure to delete?</string>
    <string name="filelist_delete_folder">This folder includes sub files, are you sure to delete?</string>
    <string name="filelist_delete_fodler_deny">This folder includes more than 10 files or sub folders, you should not delete it!</string>
    <string name="filelist_encrypt_fail">Encrypt file failed!</string>
    <string name="filelist_decipher_fail">Decipher file failed!</string>
    <string name="filelist_folder_already_exist">Folder is already exist, please input another folder name.</string>
    <string name="load_from_warning_msg">Selected database will cover default database, sure to continue?</string>
    <string name="folderdlg_moving">Moving, %d completed&#8230;</string>
    <string name="folderdlg_option_rule1">Follow by application rule, couldn\' place image at folder which includes sub-folders!</string>
    <string name="folderdlg_alreadyexist">Target folder is already exist!</string>
    <string name="spicture_myorders">My orders</string>
    <string name="spicture_myorders_noorder">Have not create an order.</string>
    <string name="spicture_myorders_add_ok">Add to order \'%s\' successfully!</string>
    <string name="add_to_order">Add to order</string>
    <string name="set_as_cover">Set as cover</string>
    <string name="view_details">View details</string>
    <string name="sorder_delete">Delete</string>
    <string name="sorder_rename">Rename</string>
    <string name="sorder_preview">Preview</string>
    <string name="sorder_access_count">View access count</string>
    <string name="openby_wall">Open by wall gallery</string>
    <string name="sorder_change_tag">Change tag</string>
    <string name="sorder_decipher_as_folder">Decipher as folder</string>
    <string name="pref_header_safety">Safety</string>
    <string name="pref_header_general">General</string>
    <string name="pref_safety_fingerprint_title">Fingerprint</string>
    <string name="pref_safety_fingerprint_desc">Use fingerprint</string>
    <string name="pref_general_home_title">Home</string>
    <string name="pref_filemanager_default">Default view</string>
    <string name="pref_filemanager_originname">Show origin name</string>
    <string name="pref_filemanager_originname_summary">Encrypted file will display original name</string>
    <string name="setting_title_surf">Folder/Order explorer</string>
    <string name="setting_sorder_set_page_numbers">Set order numbers per page in page mode.</string>
    <string name="setting_sorder_cover_cascade_num">Cascade cover numbers</string>
    <string name="setting_sorder_enable_page">Enable page mode.</string>
    <string name="setting_sorder_grid_open">Target explore to open selected order in grid page</string>
    <string name="setting_sorder_index_open">Target explore to open selected order in index page</string>
    <string name="setting_edit_casual_number">Casual look number</string>
    <string name="setting_waterfall">Waterfall view</string>
    <string name="setting_timeline_view_default">Default timeline view</string>
    <string name="setting_book_switch_default">Book view switch mode</string>
    <string name="setting_gdb_title" translatable="false">GDB</string>
    <string name="setting_http_title">Network</string>
    <string name="setting_start_view_filemanager">File manager</string>
    <string name="wall_show_file_name">Show file name</string>
    <string name="wall_image_fitxy">fit XY</string>
    <string name="wall_image_centrecrop">center crop</string>
    <string name="wall_image_origin">origin</string>
    <string name="time_line_setting">Setting</string>
    <string name="guide_timeline">Time Line</string>
    <string name="sliding_right_waterfall" translatable="false">Waterfall</string>
</resources>