<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_mode_switch"
        android:title="@string/menu_mode_switch"/>
    
    <group android:id="@+id/group_file">
        <item android:id="@+id/menu_create_folder"
            android:title="@string/menu_file_create_folder"/>
        <item android:id="@+id/menu_encrypt_current_folder"
            android:title="@string/menu_encrypt_current_folder"/>
        <item android:id="@+id/menu_decipher_current_folder"
            android:title="@string/menu_decipher_current_folder"/>
        <item android:id="@+id/menu_thumb_folder"
            android:title="@string/menu_thumb_folder"
            android:icon="@drawable/icon_thumnailview"/>
        <item android:id="@+id/menu_export"
            android:title="@string/menu_export"/>
        <item android:id="@+id/menu_import"
            android:title="@string/menu_load"/>
    </group>
    
    <group android:id="@+id/group_sorder"
        android:visible="false">
        <item android:id="@id/menu_thumb_folder"
            android:title="@string/menu_thumb_folder"
            android:icon="@drawable/icon_thumnailview"/>
        <item android:id="@+id/menu_create_order"
            android:title="@string/menu_create_order"/>
        <item android:id="@+id/menu_by_name"
            android:title="@string/menu_by_name"/>
        <item android:id="@+id/menu_by_date"
            android:title="@string/menu_by_date"/>
	    <item android:id="@+id/menu_view_grid"
	        android:title="@string/menu_view_grid"
	        android:visible="false"/>
        <item android:id="@+id/menu_view_list"
            android:title="@string/menu_view_list"/>
    </group>
    
    <group android:id="@+id/group_spicture"
        android:visible="false">
        <item android:id="@+id/menu_auto_play"
            android:title="@string/menu_auto_play"/>
        <item android:id="@+id/menu_view_current_folder"
            android:title="@string/menu_view_current_folder"/>
        <item android:id="@+id/menu_shuffle_gallery"
            android:title="@string/menu_shuffle_gallery"/>
        <item android:id="@+id/menu_random"
            android:title="@string/menu_random"/>
        <item android:id="@+id/menu_order"
            android:title="@string/menu_order"/>
        <item android:id="@+id/menu_random_game"
            android:title="@string/menu_random_game"/>
        <item android:id="@+id/menu_fullscreen"
            android:title="@string/menu_fullscreen"/>
        <item android:id="@+id/menu_view_gallery"
            android:title="@string/menu_view_gallery"/>
        <item android:id="@+id/menu_rank"
            android:title="@string/menu_rank"/>
    </group>
    
    <item android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:visible="false"/>
    
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"/>
</menu>
