<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_file">
        <item android:id="@+id/menu_encrypt_current_folder"
            android:title="@string/menu_encrypt_current_folder"/>
        <item android:id="@+id/menu_decipher_current_folder"
            android:title="@string/menu_decipher_current_folder"/>
    </group>

    <group android:id="@+id/group_home_public">
        <item android:id="@+id/menu_mode_switch"
            android:title="@string/menu_mode_switch"/>
        <item android:id="@+id/menu_check_all_unencrypted"
            android:title="@string/menu_check_all_unencrypted"/>
        <item android:id="@+id/menu_export"
            android:title="@string/menu_export"/>
        <item android:id="@+id/menu_import"
            android:title="@string/menu_load"/>
        <item android:id="@+id/menu_change_theme"
            android:title="@string/menu_change_theme"/>
        <item android:id="@+id/menu_edit"
            android:title="@string/menu_edit"/>
        <item android:id="@+id/menu_exit"
            android:title="@string/menu_exit"/>
    </group>

</menu>
