<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_folder_yellow_700_36dp"
            android:title="@string/setting_start_view_filemanager" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_yellow_700_36dp"
            android:title="@string/guide_timeline" />
        <item
            android:id="@+id/nav_waterfall"
            android:icon="@drawable/ic_blur_on_yellow_700_36dp"
            android:title="@string/sliding_right_waterfall" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_yellow_700_36dp"
            android:title="@string/time_line_setting" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update_yellow_700_36dp"
            android:title="@string/menu_gdb_check_server" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_yellow_700_36dp"
            android:title="@string/menu_exit" />
    </group>

</menu>
