<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$SafetyPreferenceFragment"
        android:icon="?attr/setting_ic_safety"
        android:title="@string/pref_header_safety" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="?attr/setting_ic_general"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$FileMnagerPreferenceFragment"
        android:icon="?attr/setting_ic_folder"
        android:title="@string/tab_filemanager" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$SOrderPreferenceFragment"
        android:icon="?attr/setting_ic_order"
        android:title="@string/tab_sorder" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$SurfPreferenceFragment"
        android:icon="?attr/setting_ic_surf"
        android:title="@string/setting_title_surf" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$WaterfallPreferenceFragment"
        android:icon="?attr/setting_ic_waterfall"
        android:title="@string/setting_waterfall" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$HttpPreferenceFragment"
        android:icon="?attr/setting_ic_http"
        android:title="@string/setting_http_title" />

    <header
        android:fragment="com.jing.app.jjgallery.viewsystem.main.settings.SettingsActivity$GdbPreferenceFragment"
        android:icon="?attr/setting_ic_gdb"
        android:title="@string/setting_gdb_title" />

</preference-headers>
