<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="List"
        android:entries="@array/pref_sorder_view_mode"
        android:entryValues="@array/pref_sorder_view_mode"
        android:key="pref_sorder_view"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_filemanager_default" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_sorder_page_mode"
        android:title="@string/setting_sorder_enable_page" />

    <EditTextPreference
        android:defaultValue="@integer/setting_page_number"
        android:inputType="number"
        android:key="pref_sorder_page_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_sorder_set_page_numbers" />

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_sorder_cascade_number"
        android:entryValues="@array/pref_sorder_cascade_number"
        android:key="pref_sorder_cascade_number"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_sorder_cover_cascade_num" />

    <ListPreference
        android:defaultValue="Surf"
        android:entries="@array/pref_explore_item_open"
        android:entryValues="@array/pref_explore_item_open"
        android:key="pref_sorder_grid_item_open"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_sorder_grid_open" />

    <ListPreference
        android:defaultValue="Wall"
        android:entries="@array/pref_explore_item_open"
        android:entryValues="@array/pref_explore_item_open"
        android:key="pref_sorder_index_item_open"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_sorder_index_open" />
</PreferenceScreen>
