<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/tab_filemanager"
        android:entries="@array/pref_general_list_home"
        android:entryValues="@array/pref_general_list_home_value"
        android:key="pref_general_list_home"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_general_home_title"/>

    <EditTextPreference
        android:defaultValue="@integer/setting_casual_number"
        android:inputType="number"
        android:key="pref_casual_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_edit_casual_number" />

    <ListPreference
        android:defaultValue="Timeline"
        android:entries="@array/pref_timeline_view_mode"
        android:entryValues="@array/pref_timeline_view_mode"
        android:key="pref_timeline_view"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_timeline_view_default"/>

    <ListPreference
        android:defaultValue="Horizontal"
        android:entries="@array/pref_book_switch_mode"
        android:entryValues="@array/pref_book_switch_mode"
        android:key="pref_book_switch_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_book_switch_default"/>
</PreferenceScreen>
