<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="List"
        android:entries="@array/pref_filemanager_view_mode"
        android:entryValues="@array/pref_filemanager_view_mode"
        android:key="pref_filemanager_view"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_filemanager_default" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_filemanager_origin"
        android:summary="@string/pref_filemanager_originname_summary"
        android:title="@string/pref_filemanager_originname" />

    <ListPreference
        android:defaultValue="Wall"
        android:entries="@array/pref_explore_item_open"
        android:entryValues="@array/pref_explore_item_open"
        android:key="pref_fm_index_item_open"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/setting_sorder_index_open" />
</PreferenceScreen>
