<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_by_name"
        android:title="@string/menu_by_name"/>
    <item android:id="@+id/menu_by_date"
        android:title="@string/menu_by_date"/>
    <item android:id="@+id/menu_by_score"
        android:title="score"/>
    <item android:id="@+id/menu_by_fk"
        android:title="fk"/>
    <item android:id="@+id/menu_by_cum"
        android:title="cum"/>
    <item android:id="@+id/menu_by_bjob"
        android:title="bjob"/>
    <item android:id="@+id/menu_by_star1"
        android:title="star1"/>
    <item android:id="@+id/menu_by_star2"
        android:title="star2"/>
    <item android:id="@+id/menu_by_starcc1"
        android:title="starcc1"/>
    <item android:id="@+id/menu_by_starcc2"
        android:title="starcc2"/>
    <item android:id="@+id/menu_by_none"
        android:title="@string/menu_by_none"/>
</menu>
